acceptance/tests/fixtures/bases/api-gateway/certificate.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: v1
kind: Secret
metadata:
  name: certificate
type: kubernetes.io/tls
data:
  tls.crt: ""
  tls.key: ""
