acceptance/tests/fixtures/bases/api-gateway/kustomization.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

resources:
  - gatewayclassconfig.yaml
  - gatewayclass.yaml
  - apigateway.yaml
  - httproute.yaml
  - meshservice.yaml
