acceptance/tests/fixtures/bases/api-gateway/meshservice.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: MeshService
metadata:
  name: mesh-service
spec:
  name: static-server
